# PyTorch-Complex-GMRES

./: .dockerignore  .flake8  Dockerfile.manylinux  LICENSE  README.md  benchmark.py  build.ps1  build.sh  pyproject.toml  setup.py
csrc/: complex_gmres_kernel.cu
src/torch_gmres/: __init__.py  cuda.pyi  solver.py  solver_python.py
tests/: test_restart_convergence.py  test_solver.py
